fix: overflow for routes table only

--- a/assets/main.less
+++ b/assets/main.less
@@ -2,11 +2,12 @@
   margin: auto;
 }
 .container {
+  height: 100%;
   flex-direction: column;
   margin: 0;
   margin-left: auto;
   display: flex;
-  position: relative;
+  position: absolute;
   padding: 0;
   justify-content: center;
   align-items: center;
